--- a/client/src/components/home/homePage.css
+++ b/client/src/components/home/homePage.css
@@ -1,11 +1,5 @@
-.nav-bar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  /* background-color: #333333; */
+html {
+  /* background-color: #585858; */
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-li {
-  float: left;
-}
