added all movies page so we can have multiple movielists on a page

--- a/client/src/styles/movies/movieCard.css
+++ b/client/src/styles/movies/movieCard.css
@@ -1,3 +1,10 @@
+.movie-card-container {
+  width: min-content;
+  height: 300px;
+  border-radius: 10px;
+}
+
 .movie-card-img {
-  max-width: 200px;
+  /* width: 200px; */
+  height: 100%;
 }
