--- a/client/src/styles/movies/allMoviesPage.css
+++ b/client/src/styles/movies/allMoviesPage.css
@@ -1,4 +1,6 @@
-.movies-page-container {
+.all-movies-container {
+  width: 100%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
