--- a/client/src/styles/movies/moviesNavBar.css
+++ b/client/src/styles/movies/moviesNavBar.css
@@ -1,3 +1,9 @@
+.movie-navbar-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .movie-navbar {
   list-style-type: none;
   margin: 0;
