home page trending func done

--- a/client/src/styles/shows/allShowsPage.css
+++ b/client/src/styles/shows/allShowsPage.css
@@ -1,6 +1,7 @@
 .all-shows-container {
   width: 100%;
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
 }
