--- a/client/src/styles/movies/allMoviesPage.css
+++ b/client/src/styles/movies/allMoviesPage.css
@@ -1,6 +1,7 @@
 .all-movies-container {
   width: 100%;
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
   flex-wrap: wrap;
 }
