--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -5,7 +5,12 @@ body {
   margin:0;
   padding:0;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background: linear-gradient(#141e30, #243b55);
+  /* background: linear-gradient(#141e30, #243b55); */
+  /* background: white; */
+    background-image:    url(../images/wallpaperflare.com_wallpaper.jpg);
+    background-size:     cover;                      /* <------ */
+    background-repeat:   no-repeat;
+    background-position: center center;
 }
 
 .error {
