--- a/client/src/styles/menus/showsNavBar.css
+++ b/client/src/styles/menus/showsNavBar.css
@@ -1,17 +1,23 @@
 .show-navbar-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-  }
-  
-  .show-navbar {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  .show-navbar li {
-    float: left;
-    height: 100%;
-  }
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.show-navbar {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+.show-navbar li {
+  float: left;
+  height: 100%;
+  margin-bottom: 10px;
+}
+
+.show-nav-item {
+  margin: 10px;
+  color: white;
+}
