--- a/client/src/styles/movies/allMoviesPage.css
+++ b/client/src/styles/movies/allMoviesPage.css
@@ -1,5 +1,7 @@
 .all-movies-container {
   width: 100%;
+  height: 80vh;
+  overflow-y: auto;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
