--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -1,5 +1,6 @@
 html {
-  height: 100%;
+  height: 100vh;
+  overflow: hidden;
 }
 body {
   margin:0;
@@ -7,8 +8,8 @@ body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   /* background: linear-gradient(#141e30, #243b55); */
   /* background: white; */
-    background-image:    url(./images/wallpaperflare.com_wallpaper.jpg);
-    background-size:     cover;                      /* <------ */
-    background-repeat:   no-repeat;
-    background-position: center center;
+  background-image:    url(./images/wallpaperflare.com_wallpaper.jpg);
+  background-size:     cover;                      /* <------ */
+  background-repeat:   no-repeat;
+  background-position: center center;
 }
