--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -11,4 +11,5 @@ body {
     background-size:     cover;                      /* <------ */
     background-repeat:   no-repeat;
     background-position: center center;
+    background-attachment: fixed;
 }
