--- a/client/src/styles/shows/showPage.css
+++ b/client/src/styles/shows/showPage.css
@@ -36,3 +36,12 @@
 .show-page-container p {
   color: white;
 }
+
+.desc {
+  color: white;
+}
+
+.desc-bold {
+  color:white;
+  font-weight: bold;
+}
