--- a/client/src/styles/movies/moviePage.css
+++ b/client/src/styles/movies/moviePage.css
@@ -1,3 +1,8 @@
+.movie-page-container {
+  height: 90vh;
+  overflow-y: auto;
+}
+
 .movie-page-img {
   max-width: 300px;
 }
@@ -18,6 +23,6 @@
   color: white;
 }
 
-.movie-page-container p{
+.movie-page-container div {
   color: white;
 }
