--- a/client/src/styles/users/newUserForm.css
+++ b/client/src/styles/users/newUserForm.css
@@ -9,6 +9,7 @@
   box-sizing: border-box;
   box-shadow: 0 15px 25px rgba(0,0,0,.6);
   border-radius: 10px;
+  margin-top: 50px;
 }
 
 .login-container h2 {
