--- a/client/src/styles/movies/moviePage.css
+++ b/client/src/styles/movies/moviePage.css
@@ -36,13 +36,13 @@
   font-weight: bold;
 }
 
-.icon {
+/* .icon {
   margin: 20px;
 }
 
 .like-dislike {
   display: inline-flex;
-  /* justify-content: center; */
+  justify-content: center;
   align-items: center;
   margin-top: 0.3em;
   margin-left: 1em;
@@ -64,4 +64,4 @@
 
 .previous-reviews label {
   margin: 20px;
-}
+} */
