--- a/client/src/styles/movies/moviePage.css
+++ b/client/src/styles/movies/moviePage.css
@@ -1,6 +1,5 @@
 .movie-page-container {
-  height: 90vh;
-  overflow-y: auto;
+  /* height: 90vh; */
 }
 
 .movie-page-img {
@@ -26,7 +25,7 @@
 .movie-page-container div {
   color: white;
 }
-
+/*
 .desc {
   color: white;
 }
@@ -36,7 +35,7 @@
   font-weight: bold;
 }
 
-/* .icon {
+.icon {
   margin: 20px;
 }
 
