--- a/client/src/styles/users/reviewForm.css
+++ b/client/src/styles/users/reviewForm.css
@@ -8,7 +8,7 @@
   flex-direction: row;
 }
 
-.like-button, .dislike-button {
+.form-like-button, .form-dislike-button {
   width: min-content;
   margin: 0;
   background-color: transparent;
@@ -16,16 +16,16 @@
   color: white;
 }
 
-.like-button:hover, .dislike-button:hover {
+.form-like-button:hover, .form-dislike-button:hover {
   filter: brightness(0.8);
 }
 
-.like-button:active, .dislike-button:active {
+.form-like-button:active, .form-dislike-button:active {
   filter: brightness(0.6);
 }
 
 .liked {
-  color: greenyellow;
+  color: greenyellow !important;
 }
 
 .disliked, .review-error {
