--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -8,7 +8,7 @@ body {
   /* background: linear-gradient(#141e30, #243b55); */
   /* background: white; */
   background-image:    url(./images/wallpaperflare.com_wallpaper.jpg);
-  background-size:     cover;                      /* <------ */
+  background-size:     cover;                      
   background-repeat:   repeat;
   background-position: center center;
   height: 100%;
@@ -17,23 +17,73 @@ body {
 
 main {
   margin-top: 70px;
-  padding-top: 20px;
+  padding: 30px;
 }
 
 button {
   cursor: pointer;
 }
 
+.flex-horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.flex-vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .none-message {
   font-style: italic;
 }
 
-.card-background {
-  width: 700px;
-  margin: 40px auto 100px auto;
-  padding: 30px;
-  background-color: red;
+.media-background {
+  width: 750px;
+  margin: 40px auto 80px auto;
+  padding: 50px 40px;
+  background-color: rgba(23, 26, 29, 0.705);
   display: flex;
   flex-direction: column;
   align-items: center;
+  border-radius: 20px;
+  box-sizing: border-box;
+}
+
+.media-background h2 {
+  margin-top: 40px;
+  color: #ff8c02;
+}
+
+.media-top-container {
+  width: 100%;
+  justify-content: space-between !important;
+  box-sizing: border-box;
+  margin: 0 50px 0 50px;
+}
+
+.media-top-right-container {
+  width: 300px;
+}
+
+.media-top-right-container h1 {
+  margin: 0;
+  font-size: 33px;
+  color: #ff8c02;
+}
+
+.media-top-right-container h3 {
+  margin: 30px 0 10px 0;
+  color: #ff8c02;
+}
+
+.media-detail-container td:first-child {
+  font-weight: 600;
+  padding-right: 20px;
+}
+
+.media-detail-container:last-child {
+
 }
