--- a/client/src/styles/menus/showsNavBar.css
+++ b/client/src/styles/menus/showsNavBar.css
@@ -22,6 +22,15 @@
   color: white;
 }
 
+.shownav-dropdown {
+  position: absolute;
+  background-color: rgb(87, 100, 117);
+  border: 1px solid black;
+  right: 50px;
+  display: flex;
+  flex-direction: column;
+}
+
 .show-navbar-wrapper h2{
   color: white;
 }
