--- a/client/src/styles/menus/moviesNavBar.css
+++ b/client/src/styles/menus/moviesNavBar.css
@@ -34,3 +34,10 @@
 .movie-navbar-wrapper h2 {
   color: white;
 }
+
+.movie-navbar-wrapper{
+  position: fixed;
+  width: 100%;
+  margin-top: 50px;
+  background: #080F3C;
+}
