--- a/client/src/styles/menus/showsNavBar.css
+++ b/client/src/styles/menus/showsNavBar.css
@@ -34,3 +34,10 @@
 .show-navbar-wrapper h2{
   color: white;
 }
+
+.show-navbar-wrapper{
+  position: fixed;
+  width: 100%;
+  margin-top: 50px;
+  background: #080F3C;
+}
