sort menu closes on click outside

--- a/client/src/styles/movies/movieList.css
+++ b/client/src/styles/movies/movieList.css
@@ -1,8 +1,12 @@
 .movie-list-container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: flex-start;
   overflow-x: auto;
   overflow-y: hidden;
   margin-bottom: 50px;
+}
+
+.movie-list-container .movie-card-container {
+  margin: 15px;
 }
