--- a/client/src/styles/menus/navBar.css
+++ b/client/src/styles/menus/navBar.css
@@ -6,11 +6,12 @@
   top: 0;
   justify-content: space-between;
   box-sizing: border-box;
-  background-color: rgb(5, 19, 34);
+  background-color: black;
   /* background-color: red; */
   padding: 15px;
   height: 70px;
   box-shadow: 0 2px 7px rgb(24, 24, 24);
+  z-index: 100;
 }
 
 .navbar-container button {
