--- a/client/src/styles/movies/allMoviesPage.css
+++ b/client/src/styles/movies/allMoviesPage.css
@@ -1,7 +1,8 @@
 .all-movies-container {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
+  grid-gap: 40px;
+  justify-content: center;
+  align-items: center;
+  padding: 40px 20px 40px 20px;
 }
