--- a/client/src/styles/movies/moviePage.css
+++ b/client/src/styles/movies/moviePage.css
@@ -11,66 +11,9 @@
   font-size: 24px;
   margin-top: 5px !important;
 }
-
-/* .movie-page-container {
-  height: 90vh;
+.movie-page-container {
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px;
 }
-
-
-
-.movie-description {
-  width: 400px;
-  color: white;
-}
-
-.movie-name {
-  font-weight: bold;
-  font-size: 20px;
-  color: white;
-}
-
-.movie-year {
-  font-weight: bold;
-  color: white;
-} */
-
-
-/*
-.desc {
-  color: white;
-}
-
-.desc-bold {
-  color:white;
-  font-weight: bold;
-}
-
-.icon {
-  margin: 20px;
-}
-
-.like-dislike {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 0.3em;
-  margin-left: 1em;
-}
-
-.like-dislike > label { 
-  margin-right: 0.2em;
-  margin-top: 0.2em;
-}
-
-.like-dislike {
-  margin-bottom: 20px;
-}
-
-.previous-reviews {
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-
-.previous-reviews label {
-  margin: 20px;
-} */
