--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -9,7 +9,7 @@ body {
   /* background: white; */
   background-image:    url(./images/wallpaperflare.com_wallpaper.jpg);
   background-size:     cover;                      
-  background-repeat:   repeat;
+  background-repeat:   no-repeat;
   background-position: center center;
   height: 100%;
 
@@ -22,6 +22,12 @@ main {
 
 button {
   cursor: pointer;
+}
+
+.loading {
+  margin-top: 200px !important;
+  width: 300px !important;
+  font-size: 46px;
 }
 
 .flex-horizontal {
@@ -38,27 +44,20 @@ button {
 
 .none-message {
   font-style: italic;
+  width: 100%;
 }
 
-.media-background {
-  width: 750px;
-  margin: 40px auto 80px auto;
-  padding: 50px 40px;
-  background-color: rgba(23, 26, 29, 0.705);
-  display: flex;
-  flex-direction: column;
+.card-background {
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(10, 13, 17, 0.705);
   align-items: center;
   border-radius: 20px;
   box-sizing: border-box;
 }
 
-.media-background h2 {
-  margin-top: 40px;
-  color: #ff8c02;
-}
-
 .media-top-container {
-  width: 100%;
+  width: 90%;
   justify-content: space-between !important;
   box-sizing: border-box;
   margin: 0 50px 0 50px;
@@ -68,15 +67,22 @@ button {
   width: 300px;
 }
 
+h1, h2, h3 {
+  color: #ff8c02 !important;
+}
+
 .media-top-right-container h1 {
   margin: 0;
   font-size: 33px;
-  color: #ff8c02;
+}
+
+.card-background h2 {
+  margin-top: 50px;
+  width: 100%;
 }
 
 .media-top-right-container h3 {
   margin: 30px 0 10px 0;
-  color: #ff8c02;
 }
 
 .media-detail-container td:first-child {
