--- a/client/src/styles/movies/allMoviesPage.css
+++ b/client/src/styles/movies/allMoviesPage.css
@@ -1,8 +1,4 @@
 .all-movies-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 200px);
-  grid-gap: 40px;
-  justify-content: center;
-  align-items: center;
-  padding: 40px 20px 40px 20px;
+  margin: 4% !important;
+  margin-top: 50px !important;
 }
