--- a/client/src/styles/movies/moviePage.css
+++ b/client/src/styles/movies/moviePage.css
@@ -1,5 +1,19 @@
+.movie-page-container {
+  width: 800px;
+  display: flex;
+  flex-direction: column;
+  padding: 40px 60px;
+  margin-bottom: 50px;
+}
+
+.movie-page-container h2 {
+  margin-top: 50px;
+  width: 100%;
+}
+
 .movie-page-img {
-  max-width: 300px;
+  height: 450px;
+  width: 300px;
 }
 
 .movie-info-container {
@@ -11,9 +25,7 @@
   font-size: 24px;
   margin-top: 5px !important;
 }
-.movie-page-container {
-  width: 800px;
-  display: flex;
-  flex-direction: column;
-  padding: 40px;
+
+.movie-trailer {
+  width: 100%;
 }
