--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -7,17 +7,20 @@ body {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   /* background: linear-gradient(#141e30, #243b55); */
   /* background: white; */
-  background-image:    url(./images/wallpaperflare.com_wallpaper.jpg);
+  background-image:    url(./images/background.jpg);
   background-size:     cover;                      
   background-repeat:   no-repeat;
   background-position: center center;
   height: 100%;
+}
 
+body * {
+  transition: color 0.2s ease-in-out;
 }
 
 main {
   margin-top: 70px;
-  padding: 30px;
+  padding-top: 40px;
 }
 
 button {
@@ -25,9 +28,14 @@ button {
 }
 
 .loading {
-  margin-top: 200px !important;
-  width: 300px !important;
+  margin: auto !important;
+  width: min-content !important;
   font-size: 46px;
+  margin-top: 250px !important;
+  background-color: rgba(16, 20, 24, 0.616);
+  text-align: center;
+  border-radius: 20px;
+  padding: 50px;
 }
 
 .flex-horizontal {
@@ -50,21 +58,23 @@ button {
 .card-background {
   margin-left: auto;
   margin-right: auto;
-  background-color: rgba(10, 13, 17, 0.705);
+  background-color: rgba(16, 20, 24, 0.616);
+  /* background-color: rgb(77, 19, 19); */
   align-items: center;
   border-radius: 20px;
   box-sizing: border-box;
 }
 
 .media-top-container {
-  width: 90%;
+  width: 100%;
   justify-content: space-between !important;
   box-sizing: border-box;
   margin: 0 50px 0 50px;
+  align-items: center;
 }
 
 .media-top-right-container {
-  width: 300px;
+  width: 50%;
 }
 
 h1, h2, h3 {
@@ -74,22 +84,100 @@ h1, h2, h3 {
 .media-top-right-container h1 {
   margin: 0;
   font-size: 33px;
-}
-
-.card-background h2 {
-  margin-top: 50px;
-  width: 100%;
+  line-height: 35px;
 }
 
 .media-top-right-container h3 {
   margin: 30px 0 10px 0;
 }
 
-.media-detail-container td:first-child {
-  font-weight: 600;
-  padding-right: 20px;
+.media-review-heading {
+  margin-top: 50px;
+  width: 100%;
+  vertical-align: middle;
+  margin-bottom: 30px;
+  align-items: center;
 }
 
-.media-detail-container:last-child {
+.media-review-heading h2 {
+  margin: 0;
+  height: min-content;
+}
 
+.media-review-heading h2:last-child {
+  width: max-content;
+  white-space: nowrap;
+  font-size: 1.5em;
+  font-weight: 600;
+  align-items: center;
+}
+
+.media-review-heading h2:last-child .icon {
+  margin: 0;
+  margin-bottom: 5px;
+  width: 28px;
+}
+
+.media-review-heading h2:last-child p {
+  margin: 0;
+  margin-left: 15px;
+  height: min-content;
+  vertical-align: middle;
+}
+
+
+.media-detail-container {
+  height: 25px;
+}
+
+.media-detail-container td:first-child {
+  width: 120px;
+  font-weight: 600;
+  padding-right: 20px;
+  vertical-align: top;
+  padding-top: 3px;
+}
+
+.media-detail-container td:last-child {
+  line-height: 20px;
+}
+
+.media-provider-img {
+  width: 32px;
+  height: 32px;
+  border-radius: 8px;
+  margin-right: 10px;
+  margin-top: 3px;
+}
+
+.active-nav {
+  font-weight: 600;
+  color: #ff8c02;
+}
+
+.media-active-nav {
+  color: #ff8c02;
+  text-decoration: underline;
+}
+
+.media-list-wrapper {
+  padding: 30px;
+}
+
+.media-list-wrapper + .media-list-wrapper {
+  margin-top: 60px;
+}
+
+.media-list-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, 200px);
+  grid-gap: 40px;
+  justify-content: center;
+  align-items: center;
+  padding: 0;
+  padding-bottom: 40px;
+}
+
+.media-list-wrapper h2 {
+  margin: 0 0 40px 30px;
 }
