--- a/client/src/styles/menus/showsNavBar.css
+++ b/client/src/styles/menus/showsNavBar.css
@@ -14,12 +14,19 @@
 .show-navbar li {
   float: left;
   height: 100%;
-  margin-bottom: 10px;
 }
 
 .show-nav-item {
   margin: 10px;
   color: white;
+  text-decoration: none;
+  font-size: 19px;
+  line-height: 30px;
+  text-underline-position: under;
+}
+
+.show-nav-item:hover {
+  color: #ff8c02;
 }
 
 .shownav-dropdown {
@@ -31,13 +38,21 @@
   flex-direction: column;
 }
 
-.show-navbar-wrapper h2{
+.show-navbar-wrapper h2 {
   color: white;
+  margin-top: 0;
+  margin-left: 10px;
 }
 
-.show-navbar-wrapper{
+.show-navbar-wrapper {
+  height: auto;
   position: fixed;
   width: 100%;
-  margin-top: 50px;
-  background: #080F3C;
+  top: 70px;
+  /* background: #080F3C; */
+  background-color: #0B1C26;
+  box-shadow: 0 2px 7px rgb(24, 24, 24);
+  padding: 10px 50px 15px 50px;
+  box-sizing: border-box;
+  border-bottom: 1.5px solid rgba(66, 66, 66, 0.233);
 }
