--- a/client/src/styles/shows/showsByGenre.css
+++ b/client/src/styles/shows/showsByGenre.css
@@ -4,7 +4,7 @@
     margin: 10px;
     color: white;
 }
-
 .shows-bygenre-container{
-    padding-top: 180px;
+    margin: 4% !important;
+    margin-top: 50px !important;
 }
