seed changed, signup issue solved

--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -9,7 +9,7 @@ body {
   /* background: white; */
   background-image:    url(./images/background.jpg);
   background-size:     cover;                      
-  background-repeat:   no-repeat;
+  background-repeat:   repeat;
   background-position: center center;
   height: 100%;
 }
