--- a/client/src/styles/menus/moviesNavBar.css
+++ b/client/src/styles/menus/moviesNavBar.css
@@ -29,7 +29,7 @@
   color: #ff8c02;
 }
 
-.movienav-dropdown {
+.nav-dropdown {
   position: absolute;
   background-color: rgb(87, 100, 117);
   border: 1px solid black;
