--- a/client/src/styles/shows/showPage.css
+++ b/client/src/styles/shows/showPage.css
@@ -2,7 +2,7 @@
   width: 800px;
   display: flex;
   flex-direction: column;
-  padding: 40px 60px;
+  padding: 40px 60px 60px 60px;
   margin-bottom: 50px;
 }
 
