--- a/client/src/styles/home/homePage.css
+++ b/client/src/styles/home/homePage.css
@@ -1,3 +1,5 @@
+
+
 .trending-rank{
     display: flex;
     justify-content: space-between;
@@ -10,13 +12,14 @@
 .home-page-container h1{
     text-align: center !important;
     color: white;
+    
   }
   
   .home-page-container {
-    padding-top: 50px;
+    padding-top: 0px;
     color: white;
   }
 
   .red{
-    color:red
+    color:rgb(255, 46, 46)
   }
