--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -25,6 +25,22 @@ main {
 
 button {
   cursor: pointer;
+  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  background-color: #fda130;
+  font-weight: bold;
+  color: rgba(8, 10, 12, 0.616); 
+  border-radius:0.5em;
+  font-size: 13px;
+  border: none;
+  outline:none;
+  padding: 5px;
+  margin:0 0.3em 0.3em 0;
+}
+
+button:hover {
+  background-color: #fa9519;
+  /* padding-right: 24px;
+  padding-left:8px; */
 }
 
 .loading {
