--- a/client/src/styles/errors/apiError.css
+++ b/client/src/styles/errors/apiError.css
@@ -1,6 +1,7 @@
 .error-container {
-  width: 500px !important;
+  width: max-content !important;
   margin: auto;
+  margin-top: 100px;
   padding: 40px 40px 60px 40px;
 }
 
