--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -5,11 +5,9 @@ body {
   margin:0;
   padding:0;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  /* background: linear-gradient(#141e30, #243b55); */
-  /* background: white; */
   background-image:    url(./images/background.jpg);
   background-size:     cover;                      
-  background-repeat:   repeat;
+  background-repeat:   no-repeat;
   background-position: center center;
   height: 100%;
 }
