--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -24,21 +24,19 @@ main {
 button {
   cursor: pointer;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-  background-color: #fda130;
+  background-color: #ff8c02;
   font-weight: bold;
   color: rgba(8, 10, 12, 0.616); 
   border-radius:0.5em;
   font-size: 13px;
   border: none;
-  outline:none;
+  outline: none;
   padding: 5px;
-  margin:0 0.3em 0.3em 0;
+  /* margin: 0 0.3em 0.3em 0; */
 }
 
 button:hover {
-  background-color: #fa9519;
-  /* padding-right: 24px;
-  padding-left:8px; */
+  filter: brightness(0.8);
 }
 
 .loading {
@@ -161,7 +159,8 @@ h1, h2, h3 {
   height: 32px;
   border-radius: 8px;
   margin-right: 10px;
-  margin-top: 3px;
+  margin-top: 5px;
+  margin-bottom: -2px;
 }
 
 .active-nav {
