--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -23,16 +23,14 @@ main {
 
 button {
   cursor: pointer;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-color: #ff8c02;
   font-weight: bold;
   color: rgba(8, 10, 12, 0.616); 
-  border-radius:0.5em;
+  border-radius: 8px;
   font-size: 13px;
   border: none;
   outline: none;
-  padding: 5px;
-  /* margin: 0 0.3em 0.3em 0; */
+  padding: 0 10px;
 }
 
 button:hover {
@@ -171,26 +169,4 @@ h1, h2, h3 {
 .media-active-nav {
   color: #ff8c02;
   text-decoration: underline;
-}
-
-.media-list-wrapper {
-  padding: 30px;
-}
-
-.media-list-wrapper + .media-list-wrapper {
-  margin-top: 60px;
-}
-
-.media-list-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, 200px);
-  grid-gap: 40px;
-  justify-content: center;
-  align-items: center;
-  padding: 0;
-  padding-bottom: 40px;
-}
-
-.media-list-wrapper h2 {
-  margin: 0 0 40px 30px;
 }
