--- a/client/src/styles/menus/navBar.css
+++ b/client/src/styles/menus/navBar.css
@@ -31,6 +31,7 @@
 .website-logo {
   height: 100%;
   text-decoration: none;
+  color: white;
 }
 
 .website-logo-img {
@@ -66,6 +67,7 @@
   text-decoration: none;
   text-underline-position: under;
   vertical-align: middle;
+  transition: color 0.2s ease-in-out;
 }
 
 .nav-item:hover {
@@ -74,6 +76,10 @@
 
 .navbar-button-container {
   min-width: max-content;
+}
+
+.navbar-button-container button:first-child {
+  margin-right: 10px;
 }
 
 #search-button {
