--- a/client/src/styles/users/editUserInfo.css
+++ b/client/src/styles/users/editUserInfo.css
@@ -1,15 +1,15 @@
-.login-container {
+.edit-user-container {
   width: 400px;
   margin: auto;
-  margin-top: 200px;
+  margin-top: 50px;
   padding: 40px 50px;
 }
 
-.login-container * {
+.edit-user-container * {
   box-sizing: border-box;
 }
 
-#login-form {
+#edit-user-form {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -44,7 +44,7 @@
   font-weight: 600;
 }
 
-.login-container button { 
+.edit-user-container button { 
   width: 40%;
   height: 40px;
   font-size: 16px;
