--- a/client/src/styles/users/mediaRequest.css
+++ b/client/src/styles/users/mediaRequest.css
@@ -1,181 +1,57 @@
 .media-request-container {
-  position: absolute;
-  top: 50%;
-  left: 50%;
   width: 400px;
-  padding: 40px;
-  transform: translate(-50%, -50%);
-  background: rgba(0,0,0,.5);
-  box-sizing: border-box;
-  box-shadow: 0 15px 25px rgba(0,0,0,.6);
-  border-radius: 10px;
-  margin-top: 2%;
+  margin: auto;
+  margin-top: 50px;
+  padding: 40px 50px;
 }
 
-::-webkit-calendar-picker-indicator {
-  filter: invert(1);
+.media-request-container * {
+  box-sizing: border-box;
 }
 
 .media-request-container h2 {
-  margin: 0 0 30px;
-  padding: 0;
-  color: #fff;
-  text-align: center;
-}
-
-.media-request-container .user-input-container {
-  position: relative;
-}
-
-.media-request-container .user-input-container input {
-  width: 100%;
-  padding: 10px 0;
-  font-size: 16px;
-  color: #fff;
-  margin-top: 10px;
+  margin: 0;
   margin-bottom: 30px;
-  border: none;
-  border-bottom: 1px solid #fff;
-  outline: none;
-  background: transparent;
-}
-.media-request-container .user-input-container label {
-  position: absolute;
-  top:0;
-  left: 0;
-  padding: 10px 0;
-  font-size: 16px;
-  color: #fff;
-  pointer-events: none;
-  transition: .5s;
 }
 
-.media-request-container .user-input-container input:focus ~ label,
-.media-request-container .user-input-container input:valid ~ label {
-  top: -20px;
-  left: 0;
-  color: white;
-  font-size: 20px;
-}
-
-.media-request-container form button {
-  background-color: transparent;
-  position: relative;
-  display: inline-block;
-  padding: 10px 20px;
-  color: white;
-  font-size: 16px;
-  text-decoration: none;
-  /* text-transform: uppercase; */
-  overflow: hidden;
-  transition: .5s;
-  /* margin-left: 20px; */
-  margin-right: 20px;
-  margin-top: 20px;
-  margin-bottom: 25px;
-  letter-spacing: 4px
-}
-
-.media-request-container button:hover {
-  background: #03e9f4;
-  color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 0 5px #03e9f4,
-              0 0 25px #03e9f4,
-              0 0 50px #03e9f4,
-              0 0 100px #03e9f4;
-}
-
-.media-request-container button span {
-  position: absolute;
-  display: block;
-}
-
-.media-request-container button span:nth-child(1) {
-  top: 0;
-  left: -100%;
+#media-request-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  height: 2px;
-  background: linear-gradient(90deg, transparent, #03e9f4);
-  animation: btn-anim1 1s linear infinite;
 }
 
-@keyframes btn-anim1 {
-  0% {
-    left: -100%;
-  }
-  50%,100% {
-    left: 100%;
-  }
-}
-
-.media-request-container button span:nth-child(2) {
-  top: -100%;
-  right: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(180deg, transparent, #03e9f4);
-  animation: btn-anim2 1s linear infinite;
-  animation-delay: .25s
-}
-
-@keyframes btn-anim2 {
-  0% {
-    top: -100%;
-  }
-  50%,100% {
-    top: 100%;
-  }
-}
-
-.media-request-container button span:nth-child(3) {
-  bottom: 0;
-  right: -100%;
+.user-input-container {
+  display: flex;
+  flex-direction: column-reverse;
   width: 100%;
-  height: 2px;
-  background: linear-gradient(270deg, transparent, #03e9f4);
-  animation: btn-anim3 1s linear infinite;
-  animation-delay: .5s
 }
 
-@keyframes btn-anim3 {
-  0% {
-    right: -100%;
-  }
-  50%,100% {
-    right: 100%;
-  }
+.user-input-container + .user-input-container {
+  margin-top: 25px;
 }
 
-.media-request-container button span:nth-child(4) {
-  bottom: -100%;
-  left: 0;
-  width: 2px;
-  height: 100%;
-  background: linear-gradient(360deg, transparent, #03e9f4);
-  animation: btn-anim4 1s linear infinite;
-  animation-delay: .75s
+.user-input-container * {
+  width: 100%;
 }
 
-@keyframes btn-anim4 {
-  0% {
-    bottom: -100%;
-  }
-  50%,100% {
-    bottom: 100%;
-  }
+.user-input-container input {
+  font-size: 16px;
+  padding: 5px 10px;
+  height: 40px;
 }
 
-#user-page-container{
-  color: white;
+.user-input-container label {
+  color: #ff8c02;
+  font-size: 18px;
+  margin-bottom: 8px;
+  margin-left: 3px;
+  font-weight: 600;
 }
 
-div{
-  color: white;
-}
-
-.heading {
-border: 1px solid white;
-border-radius: 4px;
-padding: 6px;
+.media-request-container button { 
+  width: 40%;
+  height: 40px;
+  font-size: 16px;
+  margin-top: 30px;
 }
