--- a/client/src/styles/errors/apiError.css
+++ b/client/src/styles/errors/apiError.css
@@ -2,7 +2,9 @@
   width: max-content !important;
   margin: auto;
   margin-top: 100px;
-  padding: 40px 50px 60px 50px;
+  padding: 70px;
+  padding-top: 40px;
+  color: white;
 }
 
 .error-status {
