--- a/client/src/styles/users/userProfile.css
+++ b/client/src/styles/users/userProfile.css
@@ -14,7 +14,7 @@
 }
 
 .profile-heading-container button {
-  height: 100%;
+  height: 30px;
 }
 
 .profile-heading-container div button:first-child {
