--- a/client/src/styles/home/searchBar.css
+++ b/client/src/styles/home/searchBar.css
@@ -10,7 +10,8 @@
   height: 100%;
   width: 100%;
   border: 0;
-  padding: 0 0 0 5px;
+  padding: 0;
+  padding-left: 10px;
   outline: 1px solid black;
 }
 
@@ -30,7 +31,7 @@
 }
 
 .searchInput{
-  /* border-radius:0.5em !important; */
+  border-radius: 10px 0 0 10px !important;
 }
 
 .autocomplete-div p {
@@ -47,4 +48,11 @@
 .result-title{
   -webkit-text-stroke: 0.5px red;
   color: Black;
+}
+
+.search-reset-button {
+  border-radius: 0 10px 10px 0;
+  background-color: rgb(67, 78, 85);
+  color: white;
+  /* outline: 1px solid black; */
 }
