--- a/client/src/styles/users/newUserForm.css
+++ b/client/src/styles/users/newUserForm.css
@@ -9,39 +9,17 @@
   box-sizing: border-box;
 }
 
+.signup-container h1 {
+  margin: 0;
+  margin-bottom: 30px;
+  color: white !important;
+}
+
 #signup-form {
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 100%;
-}
-
-.user-input-container {
-  display: flex;
-  flex-direction: column-reverse;
-  width: 100%;
-}
-
-.user-input-container + .user-input-container {
-  margin-top: 25px;
-}
-
-.user-input-container * {
-  width: 100%;
-}
-
-.user-input-container input {
-  font-size: 16px;
-  padding: 5px 10px;
-  height: 40px;
-}
-
-.user-input-container label {
-  color: #ff8c02;
-  font-size: 18px;
-  margin-bottom: 8px;
-  margin-left: 3px;
-  font-weight: 600;
 }
 
 .signup-container button { 
