--- a/client/src/styles/menus/moviesNavBar.css
+++ b/client/src/styles/menus/moviesNavBar.css
@@ -4,6 +4,10 @@
   justify-content: space-between;
 }
 
+.movie-navbar-container button {
+  color: #5e3500;
+}
+
 .movie-navbar {
   list-style-type: none;
   margin: 0;
