--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -6,6 +6,7 @@ body {
   padding:0;
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   background-image:    url(./images/background.jpg);
+  /* background-color: #5e3500; */
   background-size:     cover;                      
   background-repeat:   no-repeat;
   background-position: center center;
@@ -96,8 +97,9 @@ input:hover, input:focus, textarea:hover, textarea:focus {
 .card-background {
   margin-left: auto;
   margin-right: auto;
-  background-color: rgba(16, 20, 24, 0.616);
+  background-color: rgba(16, 20, 24, 0.8);
   /* background-color: rgb(77, 19, 19); */
+  /* background-color: #e5e5e5; */
   align-items: center;
   border-radius: 20px;
   box-sizing: border-box;
@@ -116,7 +118,7 @@ input:hover, input:focus, textarea:hover, textarea:focus {
 }
 
 h1, h2, h3 {
-  color: #ff8c02 !important;
+  color: #e07a00 !important;
 }
 
 .media-top-right-container h1 {
@@ -207,6 +209,7 @@ h1, h2, h3 {
 }
 
 .watchlist-button {
+  color: #2f5025 !important;
   width: max-content;
   margin-top: 20px;
   margin-left: 5px;
@@ -217,6 +220,7 @@ h1, h2, h3 {
 }
 
 .watchlist-remove {
+  color: #540000 !important;
   background-color: #e95c5c !important;
 }
 
