--- a/client/src/styles/users/review.css
+++ b/client/src/styles/users/review.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin-top: 30px;
   padding: 30px 40px 40px 40px;
-  background-color: rgba(70, 89, 100, 0.644);
+  background-color: rgba(70, 89, 100, 0.3);
   border-radius: 20px;
 }
 
@@ -36,4 +36,8 @@
 
 .review-content {
   margin-top: 20px;
+}
+
+.review-button {
+  color: #5e3500;
 }
