--- a/client/src/styles/home/searchBar.css
+++ b/client/src/styles/home/searchBar.css
@@ -23,47 +23,52 @@
 .autocomplete-div {
   z-index: 999;
   position: absolute;
-  top: 40px;
+  top: 45px;
   background: white;
   max-height: 300px;
+  overflow-x: hidden;
   overflow-y: auto;
   color: black;
+  display: flex;
+  flex-direction: column;
+  /* padding: 10px; */
+  border-radius: 10px;
+  width: 400px;
+  margin-left: 10px;
+  background-color: rgb(70, 81, 92);
 }
 
 .searchInput {
-  /* border-radius: 10px 0 0 10px !important; */
+  border-radius: 10px 0 0 10px !important;
+}
+
+.autocomplete-div a {
+  margin: 0;
+  padding: 10px 15px;
+  width: 100%;
+  text-decoration: none;
+  color: white;
 }
 
 .autocomplete-div p {
-  margin: 0;
-  padding: 10px 5px;
-  width: 250px;
+  margin-left: 15px;
+  color: white;
 }
 
-.autocomplete-div p:hover{
+.autocomplete-div a:hover{
   cursor: pointer;
-  background: #F8F9F9;
+  background-color: rgb(58, 68, 77);
 }
 
 .result-title{
-  -webkit-text-stroke: 0.5px red;
-  color: Black;
+  color: #ff8c02;
+  margin: 15px;
 }
 
 .search-reset-button {
-  width: 40px;
   border-radius: 0 10px 10px 0;
-  box-sizing: border-box;
-  /* background-color: rgba(67, 78, 85, 0.37); */
-  background-color: transparent;
-  color: white;
-  margin-left: -33px;
-  padding: 0;
+  background-color: rgb(255, 255, 255);
   color: rgb(109, 109, 109);
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 100;
-}
-
-.search-reset-button:hover {
-  background-color: rgba(95, 95, 95, 0.219);
 }
