--- a/client/src/styles/menus/sortMenu.css
+++ b/client/src/styles/menus/sortMenu.css
@@ -1,7 +1,11 @@
 .nav-dropdown {
   padding: 10px;
   right: 50px;
-  margin-top: 30px;
+  margin-top: 35px;
+  color: white;
+  background-color: rgb(70, 81, 92);
+  border-radius: 9px;
+  outline: 0;
 }
 
 .nav-dropdown div {
