--- a/client/src/styles/home/homePage.css
+++ b/client/src/styles/home/homePage.css
@@ -4,7 +4,7 @@
   padding-top: 20px;
 }
 
-.home-page-container h1, h2 {
+.home-page-container h1, .home-page-container h2 {
   text-align: center;
 }
 
