--- a/client/src/styles/home/homePage.css
+++ b/client/src/styles/home/homePage.css
@@ -19,7 +19,7 @@
 }
 
 .home-page-container .media-list-wrapper h2 {
-  color: #ff8c02 !important;
+  color: #ffba02 !important;
   font-weight: 600 !important;
 }
 
