--- a/client/src/styles/root.css
+++ b/client/src/styles/root.css
@@ -27,7 +27,7 @@ button {
   border: none;
   outline: none;
   padding: 0 10px;
-  filter: 0;
+  /* filter: 0; */
   transition: 0.15s ease-in-out;
 }
 
